--- a/ModelisationGeometrique_TP3/ModelisationGeometrique_TP3.vcxproj
+++ b/ModelisationGeometrique_TP3/ModelisationGeometrique_TP3.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="base3d.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B826EFEC-72BA-40AB-AA80-324E499CC674}</ProjectGuid>
     <RootNamespace>ModelisationGeometrique_TP3</RootNamespace>
@@ -114,9 +117,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\MEGASync\Cours\Cours\Gamagora\Modélisation géométrique\TP3\base3d.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
