--- a/ModelisationGeometrique_TP3/ModelisationGeometrique_TP3.vcxproj.filters
+++ b/ModelisationGeometrique_TP3/ModelisationGeometrique_TP3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\MEGASync\Cours\Cours\Gamagora\Modélisation géométrique\TP3\base3d.cpp">
+    <ClCompile Include="base3d.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
